--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -121,12 +121,12 @@
             
         </div>
         <div class="view-proudcut">
-            <img src="/images/portfolio/1.jpg" alt="watch">
-            <img src="/images/portfolio/2.jpg" alt="watch">
-            <img src="/images/portfolio/3.jpg" alt="watch">
-            <img src="/images/portfolio/4.jpg" alt="watch">
-            <img src="/images/portfolio/5.jpg" alt="watch">
-            <img src="/images/portfolio/6.jpg" alt="watch">
+            <img src="./images/portfolio/1.jpg" alt="watch">
+            <img src="./images/portfolio/2.jpg" alt="watch">
+            <img src="./images/portfolio/3.jpg" alt="watch">
+            <img src="./images/portfolio/4.jpg" alt="watch">
+            <img src="./images/portfolio/5.jpg" alt="watch">
+            <img src="./images/portfolio/6.jpg" alt="watch">
             <div class="clear-fix"></div>
         </div>
     </div>
@@ -134,7 +134,7 @@
     <h1>Client's Feedback</h1>
     <div class="box">
     <div class="feedback-me">
-        <img src="/images/feedback.jpg" alt="me">
+        <img src="./images/feedback.jpg" alt="me">
     </div>
     <div class="feedback-box">
         <h3>alex ander</h3>
@@ -157,7 +157,7 @@
 <div class="blog" id="blog">
     <h1>Our Blog</h1>
     <div class="blog-content">
-        <img src="/images/blog/12.jpg" alt="">
+        <img src="./images/blog/12.jpg" alt="">
         <p>23 November, 2015</p>
         <h2>Web Design Blog Post</h2>
         <p>Lorem ipsum dolor sit amet,
@@ -166,7 +166,7 @@
         </p>
     </div>
     <div class="blog-content">
-        <img src="/images/blog/12.jpg" alt="">
+        <img src="./images/blog/12.jpg" alt="">
         <p>23 November, 2015</p>
         <h2>Web Design Blog Post</h2>
         <p>Lorem ipsum dolor sit amet,
@@ -175,7 +175,7 @@
         </p>
     </div>
     <div class="blog-content">
-        <img src="/images/blog/32.jpg" alt="">
+        <img src="./images/blog/32.jpg" alt="">
         <p>23 November, 2015</p>
         <h2>Web Design Blog Post</h2>
         <p>Lorem ipsum dolor sit amet,
